# linux-guitar-dsp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  start_alsa.sh
.github/: copilot-instructions.md
app/: README.md
app/neural-pedal-interface/: MOBILE-RESPONSIVE.md  REFACTORING-COMPLETE.md  package-lock.json  package.json
app/neural-pedal-interface/apps/server/: package-lock.json  package.json
app/neural-pedal-interface/apps/server/src/: index.ts  models.json
app/neural-pedal-interface/apps/ui/: index.html  package-lock.json  package.json  vite.config.ts
app/neural-pedal-interface/apps/ui/src/: App.css  App.tsx
app/neural-pedal-interface/apps/ui/src/components/: BlockCard.tsx  BypassToggle.tsx  DeviceView.tsx  ParamSlider.tsx  PresetPicker.tsx
app/neural-pedal-interface/presets/: blues-crunch-new.json  blues-crunch.json  clean-new.json  clean.json  edge-of-breakup-new.json  edge-of-breakup.json  high-gain-new.json  high-gain.json
deprecated/: start_dsp.sh
deprecated/scripts/: pw_wire_minidsp.sh  wp_irig_alsa_periods.lua
deprecated/src/: main.cpp  main_pipewire.cpp
engine/: CMakeLists.txt  start_alsa.sh
engine/deprecated/scripts/: pw_wire_irig.sh  wp_disable_dummy_freewheel.lua
engine/deprecated/src/: pw_minidsp.cpp
engine/deprecated/systemd/: dsp-engine-pw.service
engine/scripts/: install_user_service.sh  pipewire_derank_dummy_freewheel.conf
engine/src/: ir_loader.h  nam_synth_test.cpp  signal_chain.h  signal_chain_nodes.cpp  signal_chain_nodes.h
scripts/: dev_all.sh  dev_app.sh  dev_pedal_ui.sh  install_user_service.sh  pw_bypass_irig.sh
src/: chain_control_server.cpp  chain_control_server.h  fft_convolver.cpp  fft_convolver.h  ir_loader.cpp  main_alsa.cpp  signal_chain.cpp  signal_chain_schema.cpp  signal_chain_schema.h
systemd/: dsp-engine-alsa.service
